--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ nav .menu li:hover .submenu {
     
     <footer class="footer-dark">
         <p>&copy; 2024 Mi Página Web - Todos Los Derechos Reservados.</p>
-        <img src="contacto.png" width="131">
+        <img src="more/contacto.png" width="131">
         <p>infercauno@gmail.com / infercados@gmail.com</p> <br>
 
         <div class="social-buttons">
